--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "postinstall": "prisma generate",
     "dev": "next dev -H 0.0.0.0",
-    "build": "next build",
+    "build": "prisma generate && prisma migrate deploy && next build",
     "start": "next start -H 0.0.0.0",
     "lint": "next lint",
     "prisma:generate": "prisma generate",
@@ -19,10 +20,10 @@
     "next": "14.2.21",
     "pdf-lib": "^1.17.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "prisma": "^5.22.0"
   },
   "devDependencies": {
-    "@netlify/plugin-nextjs": "^5.6.0",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.2.21",
     "@types/bcryptjs": "^2.4.6",
@@ -31,7 +32,6 @@
     "@types/react-dom": "^18.3.1",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.47",
-    "prisma": "^5.22.0",
     "tailwindcss": "^3.4.14",
     "typescript": "^5.6.3"
   }
